tests/compile_fail/message_trait/gui/uci_ok.rs
fn a(_: impl ruci::gui::traits::Message) {}
fn b(m: ruci::UciOk) {
    a(m);
}

fn main() {}